# jemallocator

.github/workflows/: main.yml
ci/: run.sh
jemalloc-sys/: Cargo.toml  README.md  build.rs
jemalloc-sys/src/: lib.rs
jemalloc-sys/tests/: unprefixed_malloc.rs
jemallocator/: Cargo.toml
jemallocator/tests/: background_thread_enabled.rs
test-dylib/: Cargo.toml
test-dylib/src/: main.rs
