[package]
name = "test-dylib"
version = "0.0.0"
license = "MIT OR Apache-2.0"
description = "A test helper for jemalloc-sys"
edition = "2018"
publish = false

[dependencies]
libc = { version = "^0.2.8", default-features = false }
tikv-jemalloc-sys = { path = "../jemalloc-sys" }

[build-dependencies]
cc = "^1.0.13"

[features]
override = ["tikv-jemalloc-sys/override"]

[[bin]]
name = "test-dylib"
test = false
